Fixed bug with positioning header selector. Fixed bug with long absolute positioned things being cut off.

--- a/pines/css/pines.css
+++ b/pines/css/pines.css
@@ -102,7 +102,7 @@ img {
 							Right padding = right column width + centre column right padding width */
 	position:relative;
 	left:200%;
-	overflow:hidden;
+	/*overflow:hidden; Causes long absolute positioned things to be cut off. */
 }
 .holygrail .col2 {
 	float:left;
